--- a/cmd/ponzu/templates/gen-input.tmpl
+++ b/cmd/ponzu/templates/gen-input.tmpl
@@ -1,5 +1,5 @@
 View: editor.Input("{{ .Name }}", {{ .Initial }}, map[string]string{
     "label":       "{{ .Name }}",
     "type":        "text",
-    "placeholder": "Enter the {{ .Name }} here",
+    "placeholder": "在此输入 {{ .Name }}",
 }),
