--- a/cmd/ponzu/templates/gen-textarea.tmpl
+++ b/cmd/ponzu/templates/gen-textarea.tmpl
@@ -1,4 +1,4 @@
 View: editor.Textarea("{{ .Name }}", {{ .Initial }}, map[string]string{
     "label":       "{{ .Name }}",
-    "placeholder": "Enter the {{ .Name }} here",
+    "placeholder": "在此输入 {{ .Name }}",
 }),
